src/test/ui/issues/issue-49040.rs
#![allow(unused_variables)]; //~ ERROR expected item, found `;`
fn foo() {}
